--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
-    "ccxt": "1.17.53",
+    "ccxt": "^1.18.247",
     "circular-json": "0.5.5",
     "debug": "2.6.9",
     "express": "4.16.3",
     "http-errors": "1.6.3",
-    "morgan": "1.9.0"
+    "morgan": "1.9.0",
+    "nodemon": "^1.18.10"
   },
   "devDependencies": {
     "chai": "4.1.2",
